# Transformer-Based-High-Performance-NLP-Framework

./: .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  Makefile  README.md  k8s_deployment.yaml  mypy.ini  pyproject.toml  run_tests.bat  setup.py
.github/workflows/: ci.yml
benchmarks/: benchmark_speed.py  benchmark_suite.py
csrc/: attention.cpp  feed_forward.cpp  kernels.h  ops.cpp  rms_norm.cpp  rope.cpp
examples/: demo.ipynb  generate_demo.py  pretrain.py  scale_demo.py  train_demo.py
hypertext/: __init__.py  __main__.py  config.py  layers.py  model.py  ops.py
hypertext/data/: dataset.py
hypertext/distributed/: tensor_parallel.py
hypertext/models/: llama_proto.py  llama_tp.py  moe.py
hypertext/training/: trainer.py  zero.py
hypertext/utils/: distributed.py  logger.py  onnx_exporter.py  profiler.py  quantization.py
scripts/: benchmark_serving.py  prepare_data.py
serving/: dashboard.py  server.py
tests/: test_models.py  test_ops.py
